[ch 143652587] Gets one bucketlist

--- a/bucketlist-frontend/src/app/app.component.html
+++ b/bucketlist-frontend/src/app/app.component.html
@@ -2,5 +2,6 @@
   {{title}}
 </h1>
 <router-outlet></router-outlet>
+<!--<router-outlet name='bucketlist'></router-outlet>-->
 <!-- Routed views go here -->
 
