[ch 143652587] Refactor code

--- a/bucketlist-frontend/src/app/app.component.html
+++ b/bucketlist-frontend/src/app/app.component.html
@@ -4,4 +4,4 @@
 <router-outlet></router-outlet>
 <!--<router-outlet name='bucketlist'></router-outlet>-->
 <!-- Routed views go here -->
-
+<footer> footer  Section</footer>
