[ch 143652587] Add function detete bucketlist Item

--- a/bucketlist-frontend/src/app/pages/items/items.component.html
+++ b/bucketlist-frontend/src/app/pages/items/items.component.html
@@ -41,7 +41,7 @@
           </td>
           <td>
             <button class="delete"
-              (click)="delete(item); $event.stopPropagation()">delete</button>
+              (click)="delete(item.item_id); $event.stopPropagation()">delete</button>
           </td>
         </tr>
       </div>
