--- a/bucketlist-frontend/src/app/pages/bucketlists/bucketlists.component.html
+++ b/bucketlist-frontend/src/app/pages/bucketlists/bucketlists.component.html
@@ -24,7 +24,7 @@
           <td>
             <!--DOING-->
             <button class="edit"
-              (click)="edit(bucketlist); $event.stopPropagation()">edit</button>
+              (click)="edit(bucketlist.bucketlist_id); $event.stopPropagation()">edit</button>
           </td>
           <td>
             <button class="delete"
