[ch 143652587] Add jwt token authentication

--- a/bucketlist-frontend/src/app/pages/bucketlists/bucketlists.component.html
+++ b/bucketlist-frontend/src/app/pages/bucketlists/bucketlists.component.html
@@ -7,7 +7,7 @@
     Add
   </button>
 </div>
-<bucketlist-search></bucketlist-search>
+<!--<bucketlist-search></bucketlist-search>-->
 <body>
   <div>
     <table>
