--- a/bucketlist-frontend/src/app/pages/bucketlists/bucketlists.component.css
+++ b/bucketlist-frontend/src/app/pages/bucketlists/bucketlists.component.css
@@ -1,23 +1,62 @@
+table {
+  table-layout: fixed;
+  width: 80%;
+  white-space: nowrap;
+  margin: 20px auto;
+  table-layout: auto;
+  background-color: #F2F2F2;
+}
+
 button.delete {
-  float:right;
+  /*float:right;*/
   margin-top: 2px;
   margin-right: .8em;
-  background-color: #960000 !important;
+  background-color: #900C3F;
   color:white;
 }
 
 button.edit {
-  float:right;
-  margin-top: 2px;
-  margin-right: .8em;
-  background-color: royalblue !important;
+  /*float: center;*/
+  /*margin-top: 2px;
+  margin-right: .8em;*/
+  background-color: #008080;
   color:white;
 }
 
 button.items {
-  float:right;
+  /*float:right;*/
   margin-top: 2px;
   margin-right: .8em;
-  background-color: green !important;
+  background-color: #808000;
   color:white;
+}
+
+tr{
+  width: 20%;
+}
+.rowOthers {
+  width: 20%;
+}
+.title {
+  width: 20%;
+  background-color: #848484;
+}
+
+.bucketlists td {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+table,
+td,
+th {
+  border-collapse: collapse;
+}
+
+th,
+td {
+  padding: 10px;
+  border: solid 0px;
+  text-align: center;
 }
