--- a/bucketlist-frontend/src/app/pages/bucketlists/bucketlists.component.css
+++ b/bucketlist-frontend/src/app/pages/bucketlists/bucketlists.component.css
@@ -1,62 +1,85 @@
-table {
-  table-layout: fixed;
-  width: 80%;
-  white-space: nowrap;
-  margin: 20px auto;
-  table-layout: auto;
-  background-color: #F2F2F2;
+.bucketlists{
+    margin: 20px auto;
 }
-
-button.delete {
-  /*float:right;*/
-  margin-top: 2px;
-  margin-right: .8em;
-  background-color: #900C3F;
-  color:white;
-}
-
-button.edit {
-  /*float: center;*/
-  /*margin-top: 2px;
-  margin-right: .8em;*/
-  background-color: #008080;
-  color:white;
-}
-
-button.items {
-  /*float:right;*/
-  margin-top: 2px;
-  margin-right: .8em;
-  background-color: #808000;
-  color:white;
-}
-
-tr{
-  width: 20%;
-}
-.rowOthers {
-  width: 20%;
-}
-.title {
-  width: 20%;
-  background-color: #848484;
-}
-
-.bucketlists td {
-  white-space: nowrap;
+figure.icon {
+  color: #fff;
+  position: relative;
+  float: left;
   overflow: hidden;
-  text-overflow: ellipsis;
+  background-color: #1a1a1a;
+  color: #ffffff;
+  text-align: left;
+  margin: 10px;
+  width: 100%;
+  border-radius: 0px;
+}
+figure.icon * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+figure.icon img {
+  max-width: 100%;
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  vertical-align: top;
+  opacity: 0.7;
+}
+figure.icon figcaption {
+  position: absolute;
+  padding: 40px 25px;
+  top: 0;
+  left: 0;
+}
+figure.icon h2,
+figure.icon p {
+  margin: 0;
+  padding: 0;
+}
+figure.icon h2 {
+  margin-bottom: 10px;
+  display: inline-block;
+  font-weight: 100;
+  font-size: 1.8em;
+}
+figure.icon p {
+  font-weight: 300;
+  margin-bottom: 20px;
+  line-height: 1.4em;
 }
 
-table,
-td,
-th {
-  border-collapse: collapse;
+figure.icon button {
+  display: inline-block;
+  padding: 10px 20px;
+  border: 1px solid #ffffff;
+  text-decoration: none;
+  color: #ffffff;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  -webkit-transform: translateY(50%);
+  transform: translateY(50%);
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+figure.icon button:hover {
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
-th,
-td {
-  padding: 10px;
-  border: solid 0px;
-  text-align: center;
+figure.icon.navy {
+  background-color: #222f3d;
+}
+
+figure.icon:hover img,
+figure.icon.hover img {
+  opacity: 0;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+figure.icon:hover button,
+figure.icon.hover button {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+  opacity: 1;
 }
