--- a/bucketlist-frontend/src/app/app.component.html
+++ b/bucketlist-frontend/src/app/app.component.html
@@ -6,63 +6,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" >
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
 </head>
-
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-    <li data-target="#myCarousel" data-slide-to="3"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="../assets/images/african.jpg" alt="Chania">
-      <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-        <p>LA is always so much fun!</p>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="../assets/images/rsz_rock.jpg" alt="Chicago">
-      <div class="carousel-caption">
-        <h3>Rock Climbing</h3>
-        <p>Climb a rock if not a mountain!</p>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="../assets/images/maldives.jpg" alt="New York">
-      <div class="carousel-caption">
-        <h3>Travel</h3>
-        <p>It leaves you speechless and turns you into a storyteller!</p>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="../assets/images/rsz_african_safari_kenya.jpg" alt="New York">
-      <div class="carousel-caption">
-        <h3>Adventure</h3>
-        <p>Go on Safari!</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-<router-outlet></router-outlet>
-<!--<router-outlet name='bucketlist'></router-outlet>-->
-<!-- Routed views go here -->
-<footer> footer  Section</footer>
+<body>
+  <router-outlet></router-outlet>
+  <!--<router-outlet name='bucketlist'></router-outlet>-->
+  <!-- Routed views go here -->
+</body>
+<footer></footer>
