--- a/bucketlist-frontend/src/app/pages/bucketlists/bucketlists.component.html
+++ b/bucketlist-frontend/src/app/pages/bucketlists/bucketlists.component.html
@@ -21,13 +21,23 @@
 </div>
 <br>
 <body>
-<div *ngIf="message" class="alert alert-info alert-dismissible" role="alert"> 
+<div *ngIf="successMessage" class="alert alert-success alert-dismissible" role="alert"> 
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span></button>
-  {{ message }}
+  {{ successMessage }}
+</div>
+<div *ngIf="errorMessage" class="alert alert-danger alert-dismissible" role="alert"> 
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span></button>
+  {{ errorMessage }}
+</div>
+<div *ngIf=showButton class="alert alert-info alert-dismissible" role="alert"> 
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span></button>
+  Search Results
 </div>
 <button *ngIf=showButton (click)="goBack()">Back</button>
-<p *ngIf="bucketlists.length==0"><strong> You don't have any bucketlists at the moment...</strong></p>
+<p *ngIf="bucketlists.length==0"><strong> No Bucketlist found...</strong></p>
 <div class="bucketlists"  *ngFor="let bucketlist of bucketlists">
 <div class="col-md-4">
     <button class="items"
