--- a/bucketlist-frontend/src/app/pages/items/items.component.html
+++ b/bucketlist-frontend/src/app/pages/items/items.component.html
@@ -10,6 +10,16 @@
   </button>
 </div>
 <body>
+  <div *ngIf="successMessage" class="alert alert-success alert-dismissible" role="alert"> 
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span></button>
+  {{ successMessage }}
+  </div>
+  <div *ngIf="errorMessage" class="alert alert-danger alert-dismissible" role="alert"> 
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span></button>
+    {{ errorMessage }}
+  </div>
   <div *ngIf="items.length == 0">
     <strong>There are no Items at the moment</strong>
   </div>
