--- a/bucketlist-frontend/src/app/pages/user-registration/user-registration.component.html
+++ b/bucketlist-frontend/src/app/pages/user-registration/user-registration.component.html
@@ -11,6 +11,16 @@
 
         <div style="padding-top:30px" class="panel-body" >
           <div class="main-login main-center">
+            <div *ngIf="error" class="alert alert-danger alert-dismissible" role="alert"> 
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span></button>
+              {{ error }}
+            </div>
+            <div *ngIf="message" class="alert alert-success alert-dismissible" role="alert"> 
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span></button>
+              {{ message }}
+            </div>
             <form>
               <div class="form-group">
                 <label for="name" class="cols-sm-4 control-label">Username:</label>
