Add Log out function

--- a/bucketlist-frontend/src/app/pages/bucketlists/bucketlists.component.html
+++ b/bucketlist-frontend/src/app/pages/bucketlists/bucketlists.component.html
@@ -1,6 +1,16 @@
 <h1>
    MY BUCKETLISTS
+   <div class="row">
+    <div>
+      <h2>
+        <button type="button" class="btn btn-primary" (click)="logout()" style="float:right;" data-dismiss="alert">
+          <span aria-hidden="true">&times;</span> Log Out</button>
+        
+      </h2>
+    </div>
+  </div>
 </h1>
+
 <div class="row">
   <div class="col-lg-6">
     <div class="input-group">
