--- a/bucketlist-frontend/src/app/pages/items/items.component.html
+++ b/bucketlist-frontend/src/app/pages/items/items.component.html
@@ -1,5 +1,12 @@
 <h1>
    MY BUCKETLIST ITEMS
+   <div>
+      <h2>
+        <button type="button" class="btn btn-primary" (click)="logout()" style="float:right;" data-dismiss="alert">
+          <span aria-hidden="true">&times;</span> Log Out</button>
+        
+      </h2>
+    </div>
 </h1>
 <div>
   <label>New Item name:</label> <input #itemName />
