--- a/bucketlist-frontend/src/app/pages/item/item.component.html
+++ b/bucketlist-frontend/src/app/pages/item/item.component.html
@@ -1,18 +1,104 @@
-<p>
-  item works!
-</p>
 <div *ngIf="item">
-  <h2>{{item.name}} details!</h2>
-  <div>
-    <label>id: </label>{{item.item_id}}</div>
-  <div>
-    <label>name: </label>
-    <input [(ngModel)]="item.name" placeholder="name" />
-    <label>Description: </label>
-    <input [(ngModel)]="item.description" placeholder="description" />
-    <label>Status: </label>
-    <input [(ngModel)]="item.status" placeholder="status" />
-   </div>
-  <button (click)="goBack()">Back</button>
-  <button (click)="save(item.name, item.description, item.status, item.item_id)">Save</button>
-</div>
+  
+  <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    <div class="container">
+      <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-4">
+        <div class="panel panel-info" >
+          <div class="panel-heading">
+              <div class="panel-title">{{item.name}} details</div>
+          </div>   
+
+          <div style="padding-top:30px" class="panel-body" >
+            <div class="main-login main-center">
+              <div *ngIf="successMessage" class="alert alert-success alert-dismissible" role="alert"> 
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span></button>
+                {{ successMessage }}
+              </div>
+              <div *ngIf="errorMessage" class="alert alert-danger alert-dismissible" role="alert"> 
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span></button>
+                {{ errorMessage }}
+              </div>
+              
+                <div class="form-group">
+                  <label for="name" class="cols-sm-4 control-label">Username:</label>
+                  <div class="cols-sm-12">
+                    <div class="input-group">
+                      <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                      <input type="text" class="form-control" [(ngModel)]="item.name" placeholder="name"/>
+                
+                    </div>
+                  </div>
+                </div>
+                
+                <div class="form-group">
+                  <label for="name" class="cols-sm-2 control-label">Description:</label>
+                  <div class="cols-sm-10">
+                    <div class="input-group">
+                      <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                      <input type="text" class="form-control" [(ngModel)]="item.description" placeholder="description" />
+                
+                    </div>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="name" class="cols-sm-2 control-label">Date Created:</label>
+                  <div class="cols-sm-10">
+                    <div class="input-group">
+                      <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+                      <input type="text" class="form-control" [(ngModel)]="item.date_created" readonly="readonly"/>
+              
+                    </div>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="name" class="cols-sm-2 control-label">Date Modified:</label>
+                  <div class="cols-sm-10">
+                    <div class="input-group">
+                      <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+                      <input type="text" class="form-control" [(ngModel)]="item.date_modified" readonly="readonly"/>
+              
+                    </div>
+                  </div>
+                </div>
+
+
+                <div class="form-group">
+                  <label for="name" class="cols-sm-2 control-label">Done:</label>
+                  <div class="cols-sm-10">
+                    <div class="input-group">
+                      <span *ngIf="item.status==='True'" class="input-group-addon"><i class="glyphicon glyphicon-check"></i></span>
+                      <span *ngIf="item.status==='False'" class="input-group-addon"><i class="glyphicon glyphicon-refresh"></i></span>
+                        <input type="text" class="form-control" [(ngModel)]="item.status"/>
+                
+                    </div>
+                  </div>
+                </div>
+                  
+                <div class="form-group">
+                  <button class="btn btn-primary btn-lg login-button"
+                  (click)="save(item.name, item.description, item.status, item.item_id)">
+                    Save
+                  </button>
+                  <button class="btn btn-primary btn-lg login-button"
+                  (click)="goBack()">
+                    Back
+                  </button>
+                </div>
+                
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+<!--</div>-->
+</body>
+
+
+
