--- a/bucketlist-frontend/src/app/pages/user-registration/user-registration.component.html
+++ b/bucketlist-frontend/src/app/pages/user-registration/user-registration.component.html
@@ -6,7 +6,7 @@
     <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-4">
       <div class="panel panel-info" >
         <div class="panel-heading">
-            <div class="panel-title">User Registration</div>
+            <div class="panel-title">BucketList API User Registration</div>
         </div>   
 
         <div style="padding-top:30px" class="panel-body" >
