--- a/bucketlist-frontend/src/app/pages/user-login/user-login.component.html
+++ b/bucketlist-frontend/src/app/pages/user-login/user-login.component.html
@@ -6,7 +6,7 @@
     <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-4">
       <div class="panel panel-info" >
         <div class="panel-heading">
-            <div class="panel-title">Log In</div><br>
+            <div class="panel-title">BucketList API User Log In</div><br>
         </div>   
         
         <div style="padding-top:30px" class="panel-body" >
@@ -15,6 +15,11 @@
               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span></button>
               {{ error }}
+            </div>
+            <div *ngIf="message" class="alert alert-success alert-dismissible" role="alert"> 
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span></button>
+              {{ message }}
             </div>
             <form>
               <div class="form-group">
