--- a/bucketlist-frontend/src/app/pages/user-login/user-login.component.html
+++ b/bucketlist-frontend/src/app/pages/user-login/user-login.component.html
@@ -48,11 +48,11 @@
                 <button class="btn btn-primary btn-lg login-button" (click)="userLogin(userName.value, password.value);
                 userName.value=''; password.value=''">
                   Log In
-                </button>
-                <button class="btn btn-primary btn-lg login-button"
+                </button><br>
+                <li class="btn btn-link navbar-btn" style="float:right;"
                 (click)="register()">
                   Register
-                </button>
+                </li>
               </div>
             </form>
           </div>
