--- a/bucketlist-frontend/src/app/pages/user-registration/user-registration.component.html
+++ b/bucketlist-frontend/src/app/pages/user-registration/user-registration.component.html
@@ -61,10 +61,10 @@
                 userName.value=''; email.value=''; password.value=''">
                   Register
                 </button>
-                <button class="btn btn-primary btn-lg login-button"
+                <li class="btn btn-link navbar-btn" style="float:right;"
                 (click)="logIn()">
                   Log In
-                </button>
+                </li>
               </div>
               
             </form>
